--- a/_sass/_grid.scss
+++ b/_sass/_grid.scss
@@ -30,6 +30,7 @@ section {
 // Wrapper
 container {
   display: block;
+  flex-basis: 100%;
   max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
   max-width: calc(#{$content-width} - (#{$spacing-unit} * 2));
   margin-right: auto;
