--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,9 +3,9 @@
   <container>
     <a href="#top" class="button back-to-top float-right">Back to Top <icon class="icon-up"></icon></a>
     <div class="link-bar">
-      <icon class="icon-twitter"></icon> <a href="https://twitter.com/{{ site.handle }}" target="_blank" class="link-twitter">@{{ site.handle }}</a>
-      <icon class="icon-facebook"></icon> <a href="https://facebook.com/{{ site.handle }}" target="_blank" class="link-facebook">Facebook</a>
-      <icon class="icon-github"></icon> <a href="https://github.com/{{ site.handle }}" target="_blank" class="link-github">GitHub</a>
+      <!-- <icon class="icon-twitter"></icon> <a href="https://twitter.com/{{ site.handle }}" target="_blank" class="link-twitter">@{{ site.handle }}</a>
+      <icon class="icon-dribbble"></icon> <a href="https://dribbble.com/{{ site.handle }}" target="_blank" class="link-dribbble">{{ site.handle }}</a>
+      <icon class="icon-github"></icon> <a href="https://github.com/{{ site.handle }}" target="_blank" class="link-github">GitHub</a> -->
       <icon class="icon-mail"></icon> <a href="mailto:{{ site.contact }}" target="_blank" class="link-email">Email</a>
     </div>
 
