--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -11,7 +11,7 @@
   z-index: 9900;
 
   a {
-    color: $white;
+    color: inherit;
   }
 
   .site-title {
@@ -89,6 +89,16 @@
 header {
   background-color: $primary;
   color: $white;
+}
+
+// Header card
+.mega-card {
+  margin: 1em;
+  width: auto;
+  border-radius: 20px;
+  box-shadow: 4px 4px 10px rgba(50,50,50,.25);
+  min-height: 80vh;
+  display: flex;
 }
 
 // Page content
