--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,16 @@
-<footer class="site-footer">
+<footer class="site-footer text-center">
 
   <container>
-    <a href="#top" class="button back-to-top float-right">Back to Top <icon class="icon-up"></icon></a>
+    <a href="#top" class="button back-to-top">Back to Top <icon class="icon-up"></icon></a>
     <div class="link-bar">
-      <!-- <icon class="icon-twitter"></icon> <a href="https://twitter.com/{{ site.handle }}" target="_blank" class="link-twitter">@{{ site.handle }}</a>
-      <icon class="icon-dribbble"></icon> <a href="https://dribbble.com/{{ site.handle }}" target="_blank" class="link-dribbble">{{ site.handle }}</a>
-      <icon class="icon-github"></icon> <a href="https://github.com/{{ site.handle }}" target="_blank" class="link-github">GitHub</a> -->
-      <icon class="icon-mail"></icon> <a href="mailto:{{ site.contact }}" target="_blank" class="link-email">Email</a>
+      <icon class="icon-facebook"></icon> <a href="https://example.com/" target="_blank" class="link-facebook">Join the Facebook Group</a>
+      <icon class="icon-post-chat"></icon> <a href="https://example.com/" target="_blank" class="link-slack">Chat on Slack</a>
+      <icon class="icon-github"></icon> <a href="https://example.com/" target="_blank" class="link-github">Site on GitHub</a>
+      <icon class="icon-mail"></icon> <a href="mailto:name@example.com" target="_blank" class="link-email">Email Us</a>
     </div>
 
     <p class="no-margin-bottom">
-      <small>&copy; {{ site.title }}. All rights reserved. You're awesome.</small>
+      <small>&copy; {{ site.title }}. All rights reserved.</small>
     </p>
   </container>
 
