--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 
   <container>
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <a class="site-title" href="{{ site.baseurl }}/"><strong>{{ site.title }}</strong></a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
