--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -1,37 +1,5 @@
 // Buttons
-.button {
-  background: $secondary;
-  color: white!important;
-  display: inline-block;
-  font-family: $base-font-family;
-  font-size: $base-font-size;
-  padding: .5em 1em;
-  text-decoration: none;
-  border-radius: 4px;
-  font-weight: bold;
-  -webkit-user-select: none;
-  margin-bottom: $base-font-size;
-  border: none;
-  outline: none;
-  text-shadow: none;
-  &-large {
-    font-size: $base-font-size * 1.25;
-    @include media-query($on-palm) {
-      font-size: $base-font-size;
-    }
-  }
-  &:hover, &:focus, &:active {
-    background: darken($secondary, 10%);
-    text-decoration: none;
-  }
-  &:active {
-    box-shadow: inset 0 0 20px rgba(0,0,0,.5);
-  }
-  &:disabled, &-disabled {
-    opacity: .5;
-    pointer-events: none;
-  }
-}
+// Moved to _base.scss
 
 // Form Fields
 form {
