--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -93,12 +93,16 @@ header {
 
 // Header card
 .mega-card {
+  display: flex;
   margin: 1em;
   width: auto;
-  border-radius: 20px;
   box-shadow: 4px 4px 10px rgba(50,50,50,.25);
-  min-height: 80vh;
-  display: flex;
+  color: $secondary;
+  border: 4px solid;
+  border-radius: 2px;
+  background: rgba(0,0,0,.15);
+  height: auto;
+  min-height: 40vh;
 }
 
 // Page content
@@ -128,8 +132,8 @@ header {
   margin-bottom: $spacing-unit;
 }
 
-// Guests
-.guest {
+// Cast
+.person {
   margin-left: 150px;
   margin-bottom: 3em;
   @include media-query($on-palm) {
@@ -279,18 +283,24 @@ $tumblr: #35465c;
     margin: 0!important;
   }
 }
-.link-youtube {
-  color: $youtube;
-}
-.link-twitter {
-  color: $twitter;
-}
-.link-facebook {
-  color: $facebook;
-}
-.link-deviantart {
-  color: $deviantart;
-}
-.link-tumblr {
-  color: $tumblr;
+// .link-youtube {
+//   color: $youtube;
+// }
+// .link-twitter {
+//   color: $twitter;
+// }
+// .link-facebook {
+//   color: $facebook;
+// }
+// .link-deviantart {
+//   color: $deviantart;
+// }
+// .link-tumblr {
+//   color: $tumblr;
+// }
+
+// Footer
+.site-footer {
+  background: $primary-darker;
+  box-shadow: 0 -2px 5px rgba(0,0,0,0.25);
 }
